--- a/weblate/templates/addons/cdnjs.html
+++ b/weblate/templates/addons/cdnjs.html
@@ -6,7 +6,7 @@
 
   <p>{% trans "Include following snippet to load the localization from the CDN:" %}</p>
   <code>
-  <button type="button" class="btn btn-link btn-xs pull-right flip" data-clipboard-text='&lt;script src="{{ url }}" async&gt;&lt;/script&gt;' title="{% trans "Copy to clipboard" %}">{% icon "copy.svg" %}</button>
+  <button type="button" class="btn btn-link btn-xs pull-right flip" data-clipboard-value='&lt;script src="{{ url }}" async&gt;&lt;/script&gt;' title="{% trans "Copy to clipboard" %}">{% icon "copy.svg" %}</button>
   &lt;script src="{{ url }}" async&gt;&lt;/script&gt;
   </code>
 
