--- a/weblate/templates/trans/delete-project.html
+++ b/weblate/templates/trans/delete-project.html
@@ -34,7 +34,7 @@
     <div class="list-group">
         <div class="list-group-item">
         <div class="list-group-item-text">
-            <button type="button" class="btn btn-link btn-xs pull-right flip" data-clipboard-text="{{ object.full_slug }}" title="{% trans "Copy to clipboard" %}">{% icon "copy.svg" %}</button>
+            <button type="button" class="btn btn-link btn-xs pull-right flip" data-clipboard-value="{{ object.full_slug }}" title="{% trans "Copy to clipboard" %}">{% icon "copy.svg" %}</button>
 
             {{ object.full_slug }}
         </div>
