--- a/weblate/templates/trans/project-access.html
+++ b/weblate/templates/trans/project-access.html
@@ -104,7 +104,7 @@
                 {% icon 'refresh.svg' %}
                 </button>
               </form>
-              <button type="button" class="btn btn-link btn-xs" data-clipboard-text="{{ site_url }}{{ invitation.get_absolute_url }}" data-clipboard-message="{% trans "Invitation link copied to clipboard." %}" title="{% trans "Copy to clipboard" %}">{% icon "copy.svg" %}</button>
+              <button type="button" class="btn btn-link btn-xs" data-clipboard-value="{{ site_url }}{{ invitation.get_absolute_url }}" data-clipboard-message="{% trans "Invitation link copied to clipboard." %}" title="{% trans "Copy to clipboard" %}">{% icon "copy.svg" %}</button>
               <form action="{{ invitation.get_absolute_url }}" method="post" class="inlineform">
                 {% csrf_token %}
                 <input type="hidden" name="action" value="remove" />
@@ -325,7 +325,7 @@
             <td>
                 <span class="auth-token">{{ user.auth_token.key }}</span>
                 <button type="button" class="btn btn-link btn-xs" data-visibility=".auth-token" title="{% trans "Toggle API key visibility" %}">{% icon "eye.svg" %}</button>
-                <button type="button" class="btn btn-link btn-xs" data-clipboard-text="{{ user.auth_token.key }}" data-clipboard-message="{% trans "API key copied to clipboard." %}" title="{% trans "Copy to clipboard" %}">{% icon "copy.svg" %}</button>
+                <button type="button" class="btn btn-link btn-xs" data-clipboard-value="{{ user.auth_token.key }}" data-clipboard-message="{% trans "API key copied to clipboard." %}" title="{% trans "Copy to clipboard" %}">{% icon "copy.svg" %}</button>
             </td>
           </tr>
         </table>
