--- a/weblate/templates/manage/snippets/backup-credentials.html
+++ b/weblate/templates/manage/snippets/backup-credentials.html
@@ -4,11 +4,11 @@
 <table class="table">
 <tr><th>{% trans "Backup repository" %}</th><td>
     <code>{{ service.repository }}</code>
-    <button type="button" class="btn btn-link btn-xs" data-clipboard-text="{{ service.repository }}" title="{% trans "Copy to clipboard" %}">{% icon "copy.svg" %}</button>
+    <button type="button" class="btn btn-link btn-xs" data-clipboard-value="{{ service.repository }}" title="{% trans "Copy to clipboard" %}">{% icon "copy.svg" %}</button>
 </td></tr>
 <tr><th>{% trans "Passphrase" %}</th><td>
     <code>{{ service.passphrase }}</code>
-    <button type="button" class="btn btn-link btn-xs" data-clipboard-text="{{ service.passphrase }}" title="{% trans "Copy to clipboard" %}">{% icon "copy.svg" %}</button>
+    <button type="button" class="btn btn-link btn-xs" data-clipboard-value="{{ service.passphrase }}" title="{% trans "Copy to clipboard" %}">{% icon "copy.svg" %}</button>
     <p class="help-block">{% trans "The passphrase is used to encrypt the backups and is necessary to restore them." %}</p>
 </td></tr>
 <tr><th>{% trans "SSH key" %}</th><td>
