--- a/weblate/templates/zen-units.html
+++ b/weblate/templates/zen-units.html
@@ -16,7 +16,7 @@
   {{ item.unit.position }}
 {% endif %}
 <div class="pull-right flip btn-padded">
-  <a class="btn btn-link btn-xs" href="{{ site_url }}{{ item.unit.get_absolute_url }}" data-clipboard-text="{{ site_url }}{{ item.unit.get_absolute_url }}" data-clipboard-message="{% trans "Permalink copied to clipboard." %}" title="{% trans "Copy permalink" %}" tabindex="-1">{% icon "link.svg" %}</a>
+  <a class="btn btn-link btn-xs" href="{{ site_url }}{{ item.unit.get_absolute_url }}" data-clipboard-value="{{ site_url }}{{ item.unit.get_absolute_url }}" data-clipboard-message="{% trans "Permalink copied to clipboard." %}" title="{% trans "Copy permalink" %}" tabindex="-1">{% icon "link.svg" %}</a>
   <a class="btn btn-link btn-xs" href="{% url 'translate' path=object.get_url_path  %}?{{ search_url }}&amp;offset={{ item.offset }}" title="{% trans "Open in full editor" %}" tabindex="-1">{% icon "pencil-mini.svg" %}</a>
 </div>
 {% get_location_links user item.unit %}
