chore(licenses): move multi.js lib to client build workflow

--- a/weblate/templates/snippets/meta-css.html
+++ b/weblate/templates/snippets/meta-css.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="{% static 'vendor/font-source/source-sans-3.css' %}{{ cache_param }}" />
   <link rel="stylesheet" href="{% static 'vendor/font-source/source-code-pro.css' %}{{ cache_param }}" />
   {% endif %}
-  <link rel="stylesheet" href="{% static 'vendor/multi.css' %}{{ cache_param }}" />
+  <link rel="stylesheet" href="{% static 'js/vendor/multi.css' %}{{ cache_param }}" />
   <link rel="stylesheet" href="{% static 'styles/new-language.css' %}{{ cache_param }}" />
   <link rel="stylesheet" href="{% static 'styles/variables.css' %}{{ cache_param }}" />
   <link rel="stylesheet" href="{% static 'styles/main.css' %}{{ cache_param }}" />
