--- a/weblate/templates/base.html
+++ b/weblate/templates/base.html
@@ -61,8 +61,7 @@ var _rollbarConfig = {
   <script defer data-cfasync="false" src="{% static 'js/vendor/main.js' %}{{ cache_param }}"></script>
   <script defer data-cfasync="false" src="{% static 'js/vendor/autosize.js' %}{{ cache_param }}"></script>
   <script defer data-cfasync="false" src="{% static 'js/vendor/multi.js' %}{{ cache_param }}"></script>
-  <script defer data-cfasync="false" src="{% static 'vendor/mousetrap.js' %}{{ cache_param }}"></script>
-  <script defer data-cfasync="false" src="{% static 'vendor/mousetrap-global-bind.js' %}{{ cache_param }}"></script>
+  <script defer data-cfasync="false" src="{% static 'js/vendor/mousetrap.js' %}{{ cache_param }}"></script>
   <script defer data-cfasync="false" src="{% static 'vendor/bootstrap/js/bootstrap.js' %}{{ cache_param }}"></script>
   <script defer data-cfasync="false" src="{% static 'vendor/slugify.js' %}{{ cache_param }}"></script>
   <script defer data-cfasync="false" src="{% static 'js/vendor/tribute.js' %}{{ cache_param }}"></script>
