--- a/weblate/templates/js/git-status.html
+++ b/weblate/templates/js/git-status.html
@@ -168,7 +168,7 @@
       {% include "snippets/git-info.html" with object=component %}
       <tr>
         <th>{% trans "Repository details" %}</th>
-        <td class="full-cell"><pre>{{ component.repository.status }}</pre></td>
+        <td class="full-cell"><pre>{{ component.repository_status }}</pre></td>
       </tr>
     </table>
   </div>
