fix(editor): update sticky button from an id to a class

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -2237,14 +2237,14 @@ tbody.warning {
   z-index: 1000;
 }
 
-#hide-sticky {
+.hide-sticky {
   display: none;
   position: absolute;
   top: -30%;
   right: 0;
 }
 
-.sticky-bottom #hide-sticky {
+.sticky-bottom .hide-sticky {
   display: block !important;
 }
 /** END: Zen Editor sticky bottom styles */
