--- a/weblate/templates/zen-units.html
+++ b/weblate/templates/zen-units.html
@@ -88,7 +88,7 @@
 </td>
 {% endif %}
 <td {% if user.profile.zen_mode != user.profile.ZEN_HORIZONTAL %}colspan="2"{% endif %} class="translator">
-  <button id="hide-sticky" class="btn btn-light btn-sm" title="{% trans "Collapse" %}" >
+  <button class="btn btn-light btn-sm hide-sticky" title="{% trans "Collapse" %}" >
     {% icon "close.svg" %}
   </button>
   {% crispy item.form %}
