--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -7,7 +7,7 @@
 :root {
   color-scheme: only light;
   --altcha-color-text: #2a3744;
-  --altcha-border-radius: 4px;
+  --altcha-border-radius: var(--border-radius);
   --altcha-color-border: #cccccc;
 }
 
