feat: add altcha integration (#12998)
This adds altcha in addition to existing match captcha.

Fixes #1462

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -6,6 +6,9 @@
 
 :root {
   color-scheme: only light;
+  --altcha-color-text: #2a3744;
+  --altcha-border-radius: var(--border-radius);
+  --altcha-color-border: #cccccc;
 }
 
 .avatar {
@@ -2253,4 +2256,8 @@ tbody.warning {
 /* Zammad form integration */
 .zammad-form-modal-body {
   max-width: 40em !important;
+}
+
+.altcha {
+  max-width: none !important;
 }
