fix(editor): Add sticky to bottom editor when out of view (#12981)
* fix(editor): correct row offset calculation in translation editor

The logic used to the calculate scroll offset based on the closest tbody tag which is fine unless the space between them is very large (like in issue #3507) which hides the translation input. As a fix we calculate based on a closer element that can't grow in height very much to hide the translation input.

* feat(editor): implement sticky bottom feature for translation editor

* fix(editor): update sticky button from an id to a class

--- a/weblate/templates/zen-units.html
+++ b/weblate/templates/zen-units.html
@@ -88,7 +88,10 @@
 </td>
 {% endif %}
 <td {% if user.profile.zen_mode != user.profile.ZEN_HORIZONTAL %}colspan="2"{% endif %} class="translator">
-{% crispy item.form %}
+  <button class="btn btn-light btn-sm hide-sticky" title="{% trans "Collapse" %}" >
+    {% icon "close.svg" %}
+  </button>
+  {% crispy item.form %}
 </td>
 </tr>
 
