--- a/weblate/templates/snippets/meta-css.html
+++ b/weblate/templates/snippets/meta-css.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="{% static 'vendor/bootstrap/css/bootstrap-rtl.css' %}{{ cache_param }}" />
 {% endif %}
   {% if not fonts_cdn_url %}
-  <link rel="stylesheet" href="{% static 'vendor/font-source/source-sans-3.css' %}{{ cache_param }}" />
-  <link rel="stylesheet" href="{% static 'vendor/font-source/source-code-pro.css' %}{{ cache_param }}" />
+  <link rel="stylesheet" href="{% static 'js/vendor/fonts/fonts.css' %}{{ cache_param }}" />
   {% endif %}
   <link rel="stylesheet" href="{% static 'js/vendor/multi.css' %}{{ cache_param }}" />
   <link rel="stylesheet" href="{% static 'styles/new-language.css' %}{{ cache_param }}" />
@@ -22,8 +21,7 @@
 {% endif %}
 {% endcompress %}
 {% if fonts_cdn_url %}
-  <link rel="stylesheet" href="{{ fonts_cdn_url }}font-source/source-sans-3.css" />
-  <link rel="stylesheet" href="{{ fonts_cdn_url }}font-source/source-code-pro.css" />
+  <link rel="stylesheet" href="{{ fonts_cdn_url }}fonts/fonts.css" />
 {% endif %}
 {% if custom_css_hash %}
   <link rel="stylesheet" href="{% url "css-custom" %}?{{ custom_css_hash }}" />
