--- a/weblate/templates/translation.html
+++ b/weblate/templates/translation.html
@@ -418,13 +418,15 @@
           </h4>
         </div>
         <table class="table table-listing table-striped">
-          <tr>
-            <th class="number">{{ object.stats.all|intcomma }}</th>
-            <td>{% trans "File in original format as translated in the repository" %}</td>
-            <td class="number" colspan="{{ exporters|length }}">
-              <a class="btn-inline" href="{% url 'download' path=object.get_url_path %}">{{ object.component.file_format_name }}</a>
-            </td>
-          </tr>
+          {% if object.filename %}
+            <tr>
+              <th class="number">{{ object.stats.all|intcomma }}</th>
+              <td>{% trans "File in original format as translated in the repository" %}</td>
+              <td class="number" colspan="{{ exporters|length }}">
+                <a class="btn-inline" href="{% url 'download' path=object.get_url_path %}">{{ object.component.file_format_name }}</a>
+              </td>
+            </tr>
+          {% endif %}
           <tr>
             <th class="number">{{ object.stats.all|intcomma }}</th>
             <td>{% trans "All strings, converted files enriched with comments; suitable for offline translation" %}</td>
